--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   "keywords": [
     "metalize",
     "database",
+    "metadata",
     "postgres",
-    "metadata"
+    "mysql"
   ],
   "engines": {
     "node": ">=8.10"
   },
   "scripts": {
-    "test": "mocha test/index.test.js --no-timeout --exit",
+    "test": "mocha test/**/index.test.js --no-timeout --exit",
     "eslint": "eslint --max-warnings=0 **/*.js",
     "lint-staged": "lint-staged",
     "format": "prettier --write **/*.js"
@@ -43,7 +44,8 @@
     "mocha": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "mysql2": "^1.7.0"
   },
   "husky": {
     "hooks": {
