--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": ["eslint:recommended", "prettier"],
+  "plugins": [ "prettier"],
   "env": {
     "mocha": true,
     "node": true,
@@ -7,6 +8,7 @@
   },
   "parserOptions": { "ecmaVersion": 2018 },
   "rules": {
+    "prettier/prettier": "error",
     "prefer-const": ["error", {"destructuring": "all"}],
     "lines-between-class-members": ["error", "always"],
     "no-console": ["error", { "allow": ["warn", "error", "info"] }],
