--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chai": "^4.2.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.0",
