--- a/package.json
+++ b/package.json
@@ -44,19 +44,19 @@
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mocha": "^6.2.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "pg": "^7.12.1",
     "mysql2": "^1.7.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all lint-staged --parallel eslint test"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
     "*.{js,md,css,html}": [
       "prettier --trailing-comma es5 --single-quote --write",
+      "eslint",
       "git add"
     ]
   }
