--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/av-dev/metalize.git"
+    "url": "https://github.com/multum/metalize.git"
   },
-  "homepage": "https://av-dev.github.io/metalize",
-  "bugs": "https://github.com/av-dev/metalize/issues",
+  "homepage": "https://multum.github.io/metalize",
+  "bugs": "https://github.com/multum/metalize/issues",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
   "files": [
