--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ addons:
 services:
   - mysql
 install:
-  - npm install
-  - npm install codecov nyc
+  - yarn
+  - yarn add codecov
 script:
-  - nyc --reporter=lcov npm run test
+  - yarn test --coverage --verbose
   - codecov
