--- a/package.json
+++ b/package.json
@@ -29,30 +29,28 @@
     "node": ">=8.10"
   },
   "scripts": {
-    "test-runner": "mocha --timeout 10000 --exit",
-    "test": "npm run test-runner test/**/index.test.js",
-    "test/mysql": "npm run test-runner test/mysql/index.test.js",
-    "test/postgres": "npm run test-runner test/postgres/index.test.js",
+    "test": "jest",
+    "test/mysql": "jest test/mysql",
+    "test/postgres": "jest test/postgres",
     "eslint": "eslint --max-warnings=0 **/*.js",
     "format": "prettier --write **/*.js",
     "docs::start": "docsify serve docs"
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
+    "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
-    "mocha": "^7.1.0",
     "mysql2": "^2.1.0",
     "pg": "^7.18.2",
     "prettier": "^1.19.1"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && lint-staged"
+      "pre-commit": "yarn test && lint-staged"
     }
   },
   "lint-staged": {
@@ -64,6 +62,12 @@
     "*.{md,html}": [
       "prettier --write",
       "git add"
+    ]
+  },
+  "jest": {
+    "coverageReporters": [
+      "lcov",
+      "text-summary"
     ]
   }
 }
