--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "test/mysql": "jest test/mysql",
     "test/postgres": "jest test/postgres",
     "eslint": "eslint --max-warnings=0 **/*.js",
-    "format": "prettier --write **/*.js",
+    "format": "prettier --write .",
     "docs::start": "docsify serve docs"
   },
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "mysql2": "^2.1.0",
     "pg": "^7.18.2",
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.1"
   },
   "husky": {
     "hooks": {
