--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       POSTGRES_PASSWORD: 'postgres'
     ports:
       - '25432:5432'
+    container_name: 'metalize_postgres'
   mysql:
     image: mysql
     restart: always
@@ -14,3 +15,4 @@ services:
       MYSQL_ROOT_PASSWORD: 'mysql'
     ports:
       - '23306:3306'
+    container_name: 'metalize_mysql'
